# Antipetros_Discord_Bot

./: .gitignore  .isort.cfg  .pydeps  COLLECTED_TODOS.md  DECISIONS.md  MANIFEST.in  README.md  TODO.md  check_manifest.txt  cleaner.ini  found_requirements.txt  index.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
antipetros_discordbot/: __init__.py  __main__.py  antipetros_actual.py  basic_report_style.css  check_faq.txt  project_meta_data.env  test.html
antipetros_discordbot/abstracts/: command_staff_abstract.py  subsupport_abstract.py
antipetros_discordbot/auxiliary_classes/for_cogs/: aux_config_cog.py  aux_give_away_cog.py
antipetros_discordbot/bot_support/: __init__.py  bot_supporter.py
antipetros_discordbot/bot_support/sub_support/: __init__.py  blacklist_warden.py  chan_statistician.py  color_keeper.py  command_statistician.py  embed_builder.py  error_handler.py  essential_commands_keeper.py  invoke_statistician.py  regex_keeper.py  time_keeper.py
antipetros_discordbot/cogs/: __init__.py  admin_cog.py
antipetros_discordbot/cogs/admin_cogs/: admin_cog.py  performance_cog.py  purge_messages_cog.py
antipetros_discordbot/cogs/bot_admin_cogs/: config_cog.py  performance_cog.py
antipetros_discordbot/cogs/community_events_cogs/: give_away_cog.py
antipetros_discordbot/cogs/dev_cogs/: general_debug_cog.py  test_playground_cog.py
antipetros_discordbot/cogs/discord_admin_cogs/: discord_admin_cog.py  purge_messages_cog.py  security_cog.py
antipetros_discordbot/cogs/general_cogs/: absolute_time_cog.py  image_manipulation_cog.py  klimbim_cog.py  save_link_cog.py  save_link_cogs.py  save_suggestion_cog.py  save_suggestion_cogs.py  test_playground_cog.py  translate_cog.py
antipetros_discordbot/cogs/special_channels_cogs/: faq_cog.py
antipetros_discordbot/command_staff/: __init__.py  command_staff.py  staff_chan_statistician.py  staff_color_keeper.py  staff_error_handler.py  staff_invoke_statistician.py  staff_regex_keeper.py  staff_time_keeper.py
antipetros_discordbot/command_staff/helper/: command_stats_dict.py
antipetros_discordbot/data/config/: base_config.ini  cogs_config.ini  config_singleton.py  db_config.ini  solid_config.ini  user_config.ini
antipetros_discordbot/data/fixed_data/: faq_data.py  faq_list.md
antipetros_discordbot/dev_tools/: make_new_cog.py  render_new_cog_file.py
antipetros_discordbot/dev_tools/cli/: new_command_staff_soldier.py
antipetros_discordbot/dev_tools/gui/: create_cog_resources.qrc  new_cog_gui.py
antipetros_discordbot/dev_tools/templates/: cog_template.py.jinja  command_staff_template.py.jinja  command_template.py.jinja
antipetros_discordbot/dev_tools_and_scripts/: render_new_cog_file.py
antipetros_discordbot/dev_tools_and_scripts/cli/: gen_sub_supporter.py
antipetros_discordbot/dev_tools_and_scripts/data/: event_data.py  new_map.py
antipetros_discordbot/dev_tools_and_scripts/gui/: discord_code_builder_main_window.py
antipetros_discordbot/dev_tools_and_scripts/scripts/: launch_in_server.py
antipetros_discordbot/dev_tools_and_scripts/snippets/: __init__.py
antipetros_discordbot/engine/: antipetros_bot.py  bot_assistant.py  command_staff.py  global_checks.py  special_prefix.py  staff_error_handler.py  staff_invoke_statistician.py
antipetros_discordbot/init_userdata/: bin_data.py  construction_info.env  user_data_setup.py
antipetros_discordbot/utility/: checks.py  converters.py  crypt.py  data.py  data_gathering.py  embed_helpers.py  emoji_handling.py  enums.py  exceptions.py  file_system_walk.py  general_decorator.py  gidtools_functions.py  locations.py  message_helper.py  misc.py  named_tuples.py  poor_mans_abc.py  regexes.py  sqldata_storager.py  token_handling.py
designer_files/: discord_code_builder_cog_builder.ui  discord_code_builder_main_selection_screen.ui  discord_code_builder_mainwindow.ui
dev_tools/: render_new_cog_file.py
dev_tools/cli/: gen_sub_supporter.py
dev_tools/snippets/: __init__.py
dev_tools/templates/: __init__.py  cog_template.py.jinja  sub_supporter_template.py.jinja
docs/: AntiPetros_extra_channels_request.md  DECISIONS.md  TODO.md  antipetros_discordbot_structure_graph  cog_config.ini  config_doc.md  config_doc.txt  giveaway_description.md  proposals.md  standard_cogs_config.ini
misc/designer_files/: create_cog_main_window.ui  new_loop_dialog.ui
tests/cog_tests/: conftest.py  test_klimbim.py
tests/discord_markdown_helper_tests/: test_general_markdown_helper.py
tools/: _project_devmeta.env  autoflake_all.cmd  bin_data_pack.cmd  clean_workspace.py  convert_requirements_dev_to_normal.py  create_venv.cmd  create_venv_extra_envvars.py  log_pipe_create_venv.cmd  memory_profiling_time.cmd  memory_profiling_time__main__.cmd  prepare_venv_settings.py  profiling_to_graph.cmd  profiling_to_graph__main__.cmd  profiling_to_text.cmd  remove_connect_by_name.py  scratch.py
tools/venv_setup_settings/: post_setup_scripts.txt  pre_setup_scripts.txt  required_dev.txt  required_experimental.txt  required_from_github.txt  required_misc.txt  required_personal_packages.txt  required_qt.txt  required_test.txt
(+102 files in other folders)
